# oracles-iot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/scripts/: make_debian.sh
.github/workflows/: CI.yml  DockerCI.yml  ECRDelete.yml  ECRPush.yml  IoTDebian.yml
denylist/: Cargo.toml
denylist/src/: denylist.rs
hip149/: doc.md  docker-compose.yml  iot-verifier-settings-full.toml  iot-verifier-settings.toml  seed.sh  testing-plan.md
ingest/: Cargo.toml
ingest/src/: lib.rs  main.rs  server_iot.rs  settings.rs
ingest/tests/: iot_ingest.rs
iot_config/: Cargo.toml
iot_config/migrations/: 20260331000000_multibuy.sql
iot_config/src/: admin_service.rs  grpc_server.rs  lib.rs  route.rs  settings.rs  sub_dao_service.rs
iot_config/src/cli/: daemon.rs
iot_config/src/client/: mod.rs  org_client.rs  settings.rs  sub_dao_client.rs
iot_config/tests/integrations/: main.rs  migrations.rs  route_service.rs
iot_config/tests/integrations/common/: mod.rs  partial_migrator.rs
iot_packet_verifier/: Cargo.toml
iot_packet_verifier/pkg/: settings-template.toml
iot_packet_verifier/src/: daemon.rs  lib.rs  main.rs  settings.rs
iot_packet_verifier/src/backfill/: mod.rs  settings.rs  valid_packets.rs
iot_packet_verifier/src/cli/: backfill_valid_packets.rs  mod.rs  server.rs
iot_packet_verifier/src/iceberg/: mod.rs  valid_packet.rs
iot_packet_verifier/tests/: backfill_valid_packets_iceberg.rs  daemon_iceberg.rs
iot_verifier/: Cargo.toml  README.md
iot_verifier/migrations/: 16_drop_poc_tables.sql
iot_verifier/pkg/: settings-template.toml
iot_verifier/src/: gateway_cache.rs  lib.rs  loader.rs  main.rs  packet_loader.rs  reward_share.rs  rewarder.rs  settings.rs  telemetry.rs
iot_verifier/src/backfill/: burns.rs  mod.rs  rewards.rs  settings.rs
iot_verifier/src/cli/: backfill_burns.rs  backfill_rewards.rs  dump.rs  mod.rs  server.rs
iot_verifier/src/iceberg/: gateway_reward.rs  mod.rs  operational_reward.rs  reward_manifest.rs  unallocated_reward.rs
iot_verifier/tests/integrations/: backfill_burns_iceberg.rs  backfill_rewards_iceberg.rs  main.rs  rewarder_dc.rs  rewarder_iceberg.rs  rewarder_operations.rs  rewarder_oracles.rs  rewarder_poc_dc.rs
iot_verifier/tests/integrations/common/: iceberg.rs  mod.rs
poc_entropy/: Cargo.toml
poc_entropy/src/: main.rs  settings.rs
price/: Cargo.toml
reward_index/: Cargo.toml
reward_index/pkg/: settings-template.toml
reward_index/src/: extract.rs  indexer.rs  lib.rs  local_reward_manifest.rs  main.rs  settings.rs
reward_index/tests/integrations/: iot.rs  main.rs
