[package]
name = "ingest"
version = "0.1.0"
description = "PoC Ingest Server for the Helium Network"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }
triggered = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
helium-proto-crypto = { workspace = true }
file-store = { workspace = true }
file-store-oracles = { workspace = true }
poc-metrics = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
# mobile-config = { path = "../mobile_config" }  # Removed - mobile-only dependency (will be pruned later)
task-manager = { workspace = true }
rand = { workspace = true }
custom-tracing = { workspace = true, features = ["grpc"] }
humantime-serde = { workspace = true }
tls-init = { workspace = true }

[dev-dependencies]
backon = "1"
