[package]
name = "iot-config"
version = "0.1.0"
description = "Configuration APIs for the IoT subnetwork"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
helium-crypto = { workspace = true, features = ["sqlx-postgres"] }
hex = "0.4"
helium-proto = { workspace = true }
helium-proto-crypto = { workspace = true }
hextree = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
humantime-serde = { workspace = true }
libflate = "1"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
prost = { workspace = true }
retainer = { workspace = true }
rust_decimal = { workspace = true, features = ["maths"] }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triggered = { workspace = true }
tls-init = { workspace = true }

custom-tracing = { workspace = true, features = ["grpc"] }
db-store = { workspace = true }
file-store = { workspace = true }
file-store-oracles = { workspace = true }
poc-metrics = { workspace = true }
task-manager = { workspace = true }

[dev-dependencies]
backon = { version = "0", features = ["tokio-sleep"] }
h3o = { workspace = true }
rand = { workspace = true }
