[package]
name = "poc-entropy"
version = "0.1.0"
description = "PoC Entropy Server (noop — POC retired per HIP-0149)"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
custom-tracing = { workspace = true, features = ["grpc"] }
helium-proto = { workspace = true }
http = { workspace = true }
poc-metrics = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tls-init = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
triggered = { workspace = true }
