[package]
name = "reward-index"
version = "0.1.0"
description = "Reward Indexer for the Helium Mobile Network"
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
triggered = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
helium-proto = { workspace = true }
helium-crypto = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
tonic = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
humantime-serde = { workspace = true }

custom-tracing = { workspace = true }
db-store = { workspace = true }
file-store = { workspace = true }
file-store-oracles = { workspace = true }
poc-metrics = { workspace = true }
task-manager = { workspace = true }
tls-init = { workspace = true }
